# Morrobroom

./: Cargo.toml
.github/workflows/: release.yaml
resources/: CompilationProfiles.cfg  GameConfig.cfg  GameEngineProfiles.cfg  Morrowind.fgd
resources/Meshes/: lightbulb.dae  lightbulb.tga  red.tga  speaker.dae
resources/Textures/: clip.tga  hurt.tga  light.tga  noise.tga  volume.tga
resources/textures/: skip.tga
src/: brush_ni_node.rs  game_object.rs  main.rs  map_data.rs  mesh.rs  surfaces.rs
