[package]
name = "morrobroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delaunator = "1.0.2"
nalgebra = "0.32.3"
shalrath = "0.2.5"

[dependencies.tes3]
git = "https://github.com/Greatness7/tes3"
branch = "dev"
features = ["esp", "nif", "nightly"]
